<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="phucduongcom.canbangdinhduong.MainActivity">
    <LinearLayout
        android:layout_above="@+id/cent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/tinh_bot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_centerInParent="true"
        android:id="@+id/cent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/mot"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <TextView
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/bm"
                android:layout_width="150dp"
                android:layout_height="50dp" />
            <EditText
                android:inputType="number"
                android:layout_width="200dp"
                android:layout_height="50dp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/hai"
            android:layout_below="@+id/mot"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <TextView
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/gao"
                android:layout_width="150dp"
                android:layout_height="50dp" />
            <EditText
                android:inputType="number"
                android:layout_width="200dp"
                android:layout_height="50dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ba"
            android:layout_below="@+id/hai"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <TextView
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/ngo"
                android:layout_width="150dp"
                android:layout_height="50dp" />
            <EditText
                android:inputType="number"
                android:layout_width="200dp"
                android:layout_height="50dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/ba"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <TextView
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/ng_c_c"
                android:layout_width="150dp"
                android:layout_height="50dp" />
            <EditText
                android:inputType="number"
                android:layout_width="200dp"
                android:layout_height="50dp" />
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
