<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="phucduongcom.canbangdinhduong.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"

        android:layout_gravity="center"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">


        <LinearLayout
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:layout_gravity="left"
                    android:id="@+id/tv_tinhbot"
                    android:layout_marginLeft="@dimen/edit_margin_left"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tinh_bot"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"


                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:layout_gravity="left"

                    android:layout_marginLeft="@dimen/edit_margin_left"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/protein"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_alignParentRight="true"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"

                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:layout_gravity="left"

                    android:layout_marginLeft="@dimen/edit_margin_left"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/chat_beo"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_alignParentRight="true"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"

                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:orientation="vertical"
            android:id="@+id/ln_vitamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <TextView

                    android:gravity="center"
                    android:layout_gravity="left"

                    android:layout_marginLeft="@dimen/edit_margin_left"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/vitamin"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_alignParentRight="true"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"


                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/next"
            android:background="@color/color_button"


            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
